# ouster_pointcloud_slice

./: .gitignore  169.254.223-metadata.json  CMakeLists.txt  ENHANCEMENT_SUMMARY.md  README.md  frames_2025-07-18_11.23.40.gv  package.xml
config/: ouster_config.yaml  slice_params.yaml
docs/: CONFIGURATION_GUIDE.md
launch/: slice.launch.py  slice_with_config.launch.py
scripts/: ouster_configurator.py
src/: pointcloud_slice.cpp
